# ALVR-OpenXR-Engine

./: .gitignore
.reuse/: dep5
specification/: Makefile
specification/registry/: xr.xml
src/: CMakeLists.txt
src/alxr_engine/: AndroidManifest.xml  CMakeLists.txt  alxr_ctypes.h  alxr_engine.cpp  alxr_engine.h  common.h  d3d_common.cpp  d3d_common.h  decoder_thread.cpp  decoder_thread.h  decoderplugin_factory.cpp  decoderplugin_ffmpeg.cpp  decoderplugin_mediacodec.cpp  decoderplugin_mediacodec_with_texture.cpp  geometry.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  graphicsplugin_opengl.cpp  graphicsplugin_opengles.cpp  graphicsplugin_opengles2.cpp  graphicsplugin_vulkan.cpp  interaction_manager.h  interaction_profiles.h  latency_manager.cpp  latency_manager.h  logger.cpp  logger.h  nal_utils.h  openxr_program.cpp  openxr_program.h  options.h  pch.h  platformplugin_android.cpp  renderer.cpp  renderer.h  surface_texture.cpp  surface_texture.h  surface_texture_wrapper.cpp  (+2 more)
src/alxr_engine/cuda/: d3d11cuda_interop.inl  d3d12cuda_interop.inl
src/alxr_engine/d3d12_shaders/: multivewLobby.hlsl  multivewLobby_vert.cso  multiviewVideo3PlaneFmt_frag.cso  multiviewVideo_frag.cso  multiviewVideo_frag.hlsl  multiviewVideo_vert.cso  multiviewVideo_vert.hlsl  passthroughBlend3PlaneFmt_frag.hlsl  passthroughBlend_frag.cso  passthroughBlend_frag.hlsl  passthroughMask3PlaneFmt_frag.cso  passthroughMask3PlaneFmt_frag.hlsl  passthroughMask_frag.cso  passthroughMask_frag.hlsl
src/alxr_engine/d3d12_shaders/common/: sRGBLinearize.hlsl
src/alxr_engine/d3d_shaders/: videoStream_vert.hlsl
src/alxr_engine/d3d_shaders/common/: sRGBLinearize.hlsl
src/alxr_engine/d3d_shaders/precompiled/SM5/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/fovDecode/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/fovDecode/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/multivew/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/multivew/fovDecode/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/multivew/fovDecode/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/multivew/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/SM5/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/multiview/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso  videoStream_vert.cso
src/alxr_engine/d3d_shaders/precompiled/multiview/fovDecode/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/multiview/fovDecode/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/d3d_shaders/precompiled/multiview/yuv3PlaneFmt/: passthroughBlend_frag.cso  passthroughMask_frag.cso  videoStream_frag.cso
src/alxr_engine/vulkan_shaders/: lobby_frag.glsl  lobby_vert.glsl  multivew_vert.glsl  multivew_vert.spv  multiviewVideo_vert.glsl  multiviewVideo_vert.spv  passthroughBlend_frag.glsl  passthroughBlend_frag.spv  passthroughMask_frag.glsl  passthroughMask_frag.spv  videoLinearSRGB_frag.glsl  videoLinearSRGB_frag.spv  videoStream_frag.glsl  videoStream_vert.glsl  video_frag.glsl  video_frag.spv  video_vert.glsl  video_vert.spv
src/alxr_engine/vulkan_shaders/common/: baseVideoFrag.glsl  sRGBLinearize.glsl
src/alxr_engine/vulkan_shaders/precompiled/: videoStream_vert.spv
src/alxr_engine/vulkan_shaders/precompiled/fovDecode/: passthroughBlend_frag.spv  passthroughMask_frag.spv  videoStream_frag.spv
src/alxr_engine/vulkan_shaders/precompiled/multiview/: passthroughBlend_frag.spv  passthroughMask_frag.spv  videoStream_frag.spv  videoStream_vert.spv
src/alxr_engine/vulkan_shaders/precompiled/multiview/fovDecode/: passthroughBlend_frag.spv  passthroughMask_frag.spv  videoStream_frag.spv
src/loader/: CMakeLists.txt
src/xr_app/: CMakeLists.txt
src/xr_engine/: CMakeLists.txt  common.h  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  main.cpp  openxr_program.cpp  openxr_program.h  options.h  rust_bindings.h
